fix: restore master brand fonts and fix logo alignment in sidebar

--- a/src/app/(frontend)/globals.css
+++ b/src/app/(frontend)/globals.css
@@ -8,23 +8,7 @@
   src: url('/fonts/GoboldBold.otf') format('opentype');
   font-weight: bold;
   font-style: normal;
-  font-display: block;
-}
-
-@font-face {
-  font-family: 'GoboldBold';
-  src: url('/fonts/GoboldBold.otf') format('opentype');
-  font-weight: bold;
-  font-style: normal;
-  font-display: block;
-}
-
-@font-face {
-  font-family: 'SportBreak-FreeVersion';
-  src: url('/fonts/SportBreakFreeVersion.otf') format('opentype');
-  font-weight: normal;
-  font-style: normal;
-  font-display: block;
+  font-display: swap;
 }
 
 @font-face {
@@ -32,7 +16,22 @@
   src: url('/fonts/SportBreakFreeVersion.otf') format('opentype');
   font-weight: normal;
   font-style: normal;
-  font-display: block;
+  font-display: swap;
+}
+
+/* Fallback aliases for SVG compatibility */
+@font-face {
+  font-family: 'SportBreak-FreeVersion';
+  src: url('/fonts/SportBreakFreeVersion.otf') format('opentype');
+  font-weight: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'GoboldBold';
+  src: url('/fonts/GoboldBold.otf') format('opentype');
+  font-weight: bold;
+  font-display: swap;
 }
 
 @tailwind base;
